--- a/map.html
+++ b/map.html
@@ -7,12 +7,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/map.css">
     <title>map</title>
+    <style>
+        html,
+        body {
+            height: 90%;
+            margin: 0;
+            padding: 0;
+        }
+
+        #map {
+            height: calc(100% - 102px);
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
-    ここにmap
+    <div class="kensaku">
+        <input type="text" size="40" class="keyword" placeholder="キーワード">
+        <input type="submit" class="kensaku_btn" value="検索">
+    </div>
+    <div id="map"></div>
+    <a href="keijiban.html">お店募集の掲示板</a>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script
+        src='https://www.bing.com/api/maps/mapcontrol?mkt=ja-jp&key=ApnknFWKFeyJLioMeKgBMAn5l6O7g7faYQ-lb4UJdXfzShkU-OJ7s9sQAXqUk4He'></script>
+    <!-- <script src='https://www.bing.com/api/maps/
+        mapcontrol?key=' async defer></script> -->
 
-    <a href="keijiban.html">お店募集</a>
+    <script>
+        //map表示用の変数
+        let map;
+        // 失敗時の関数(エラーを表示する)
+        function showError(error) {
+            let e = '';
+            if (error.code == 1) {
+                e = '位置情報が許可されてません';
+            } else if (error.code == 2) {
+                e = '現在位置を特定できません';
+            } else if (error.code == 3) {
+                e = '位置情報を取得する前にタイムアウトになりました';
+            }
+            alert('error:' + e);
+        }
+
+        const option = {
+            enableHighAccuracy: true,
+            maximumAge: 20000,
+            timeout: 1000000,
+        };
+
+        // pinを立てる関数
+        function pushPin(lat, lng, map) {
+            const location = new Microsoft.Maps.Location(lat, lng)
+            const pin = new Microsoft.Maps.Pushpin(location, {
+                color: 'red',
+                visible: true,
+            });
+            map.entities.push(pin);
+        };
+
+
+        // 位置情報を表示する
+        function mapsInit(position) {
+            const lat = position.coords.latitude;
+            const lng = position.coords.longitude;
+            // console.log(lat, lng);
+            map = new Microsoft.Maps.Map('#map', {
+                center: {
+                    latitude: lat, longitude: lng
+                },
+                zoom: 17,
+            })
+            pushPin(lat, lng, map);
+        }
+
+
+
+        // ()内には「成功時の関数」「失敗時の関数」「オプション」の順に記述する. 
+        window.onload = function () {
+            navigator.geolocation
+                .getCurrentPosition(mapsInit, showError, option);
+        }
+
+
+    </script>
 </body>
 
 </html>
